assets/stylesheets/main.css
/* --------------------------------------------------------------------------------------
+
+   SATURIZED - The Interactive Agency
+
+   = Dropdownized
+
-------------------------------------------------------------------------------------- */

/*
= IMPORTING STUFF AND SETTING DEFAULT STYLES
-------------------------------------------------------------------------------------- */
@import url("reset.css");

/*
= COMMON ---------------- */
body{
    background: #efefef;
}
form {
    width: 250px;
    margin: 25em auto 0 auto;
}
.ui-dropdownized {
    font-size: 13px;
    color: #353535;
    line-height: 38px;
    height: 38px;
    background: url('../images/dropdown-bg.png') top left no-repeat;
    font-weight: bold;
    width: 243px;
    display: block;
}
.ui-dropdownized div {
    width: 243px;
    text-indent: 15px;
    display: block;
    position: absolute;
    line-height: 38px;
    height: 38px;
}
.ui-dropdownized select {
    font-size: 11px;
}
.ui-dropdownized.hover {
    background-position: bottom left;
    color: #000;
}

